@@ -36,6 +36,7 @@ requirements:
     - netcdf4
     - mmtf-python
     - scikit-learn
+    - funcsigs
 
 test:
   imports:
